DNN-10029: Fix UI issues for dots misalignment Give padding for scrollbar

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/styles.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/styles.less
@@ -14,7 +14,7 @@
     }
     .dnn-persona-bar-treeview-ul {
         margin-left: 0px;
-        padding: 10px 0;
+        padding: 0 0;
 
         li::before, li::after {
             display: none;
@@ -197,7 +197,7 @@
     }
     ul {
         margin-left: 20px;
-        padding: 10px 0;
+        padding: 0 0;
     }
     ul:first-child {
         margin-left: 0px;
